# starter-api

./: .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.ci.yml  docker-compose.debug-tests.yml  docker-compose.debug.yml  docker-compose.tests.yml  docker-compose.yaml  docker-compose.yml  requirements.txt  snippets-resources.md
.github/workflows/: main.yml
backend/: db.py  main.py  models.py  pyproject.toml
backend/api/: album.py  endpoints.py  health.py
backend/config/: __init__.py  dyna.py  settings.toml
backend/tests/: conftest.py  main.py  test_albums.py  test_tasks.py
cicd/: .secrets.example
project/: main.py
