[tool.poetry]
name = "starter-api"
version = "0.1.0"
description = "A no-brainer starter for a dockerised FastAPI app"
authors = ["Jon Whittlestone <dev@howapped.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^23.1.0"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
fastapi = "^0.97.0"
Jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.6"
requests = "^2.28.2"
sqlmodel = "^0.0.8"
uvicorn = "^0.22.0"

# dev
httpx = "^0.24.1"
debugpy = "^1.6.7"
pytest = "^7.2.2"
dynaconf = "^3.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Shortcuts
[tool.poetry.scripts]

test = 'tests.main:start'